# 435-Project

./: Report.md  helper.h
CUDA/: CMakeCache.txt  CMakeLists.txt  CUDA_generate_cali.sh  CUDAenum_generate_cali  CUDAenum_generate_cali.sh  CleanAll.cmake  Makefile  Odd-EvenTransportCUDA.cu  bitonic  bitonic.cali  bitonic.cu  bitonicCUDA-th4-v16-tyRandom.cali  bitonic_sort.cu  bitonicsort.cali  cmake_install.cmake  cuda.grace_job  enumeration  enumeration.cali  enumeration.cu  enumerationCUDA-th16-v262144-tyReverseSorted.cali  enumerationCUDA-th2-v65536-tyReverseSorted.cali  enumerationCUDA-th32-v262144-tySorted.cali  enumerationCUDA-th4-v16-tyRandom.cali  enumerationCUDA-th512-v1048576-tyReverseSorted.cali  enumerationCUDA-th64-v262144-tyRandom.cali  merge  merge.cali  merge.cu  mergeCUDA-th1024-v131072-tyRandom.cali  mergeCUDA-th1024-v16777216-tyRandom.cali  mergeCUDA-th1024-v16777216-tyReverseSorted.cali  mergeCUDA-th1024-v16777216-tySorted.cali  mergeCUDA-th1024-v262144-tyRandom.cali  mergeCUDA-th1024-v262144-tySorted.cali  mergeCUDA-th1024-v4194304-tySorted.cali  mergeCUDA-th1024-v65536-tySorted.cali  mergeCUDA-th1024-v67108864-tySorted.cali  mergeCUDA-th128-v16777216-tyRandom.cali  mergeCUDA-th128-v16777216-tyReverseSorted.cali  mergeCUDA-th128-v16777216-tySorted.cali  (+59 more)
CUDA/enumeration_sort/: enumeration_sort.cu
CUDA/merge_sort/: CMakeCache.txt  Makefile  bitonic  bitonic.cu  cmake_install.cmake  enumeration  enumeration.cu  merge  merge.cu  merge.grace_job  oddeven  oddeven.cu
MPI/: CMakeCache.txt  CMakeLists.txt  MPI_generate_cali.sh  Makefile  bitonic  bitonic.cpp  bitonicMPI-p4-v16-tRandom.cali  bitonic_sort_mpi.cpp  cmake_install.cmake  enumeration  enumeration.cpp  enumerationMPI-p4-v16-tRandom.cali  merge  merge.cpp  mergeMPI-p2-v65536-tRandom.cali  mergeMPI-p4-v16-tRandom.cali  merges  mergesort  mergesort.cpp  mpi.grace_job  oddEvenSort.c  oddeven  oddeven.cpp  oddevenMPI-p4-v16-tRandom.cali  output.9249611  output.9249720  output.9250032  output.9250313  output.9250418  output.9250423  output.9250495  output.9295985  output.9296015  output.9296034  output.9296047  output.9309198  output.9309209
MPI/enumeration_sort/: enumeration_sort.cpp
